ToCurrencyExt
ToPercentExt

String Extensions:
CapitalizeExt
DuplicateExt
CenterExt
IsAlphaNumericExt
IsAlphaExt
IsNumericExt
IsASCIIExt
IsLowerExt
IsUpperExt

1.0.1.3 October 24, 2021
New Extensions

String Extensions:
IsMatchExt - Returns true if the string matches the regular expression pattern parameter, otherwise returns false.
ToUriExt - Converts a string to a Uri.
ToHttpWebRequest - Creates an HttpWebRequest from the value in the string.

1.0.2.1

Fixed the ToStreamExt & ToHttpWebRequestExt extensions.

Moved the following Extensions to File Extensions:
WriteToFileExt
WriteToGZippedFileExt
ReadFromGZippedFileExt

New Extensions

Generic Extensions:
ToKeyValuePairExt
RepeatExt
TraceExt
TraceIfExt
TraceLineExt
TraceLineIfExt

Number Extensions:
ToRangeExt

String Extensions:
ToBase64StringExt
PrintExt
TraceErrorExt
TraceWarningExt
TraceInformationExt

Boolean Extensions:
AssertExt

Date Extensions:
IsLeapYearExt
IsLeapDayExt
DaysInMonthExt
WeekOfYearExt

Enumeration Extensions:
ToListExt
GetNameExt
GetNamesExt

Char Extensions:
ToUpperExt
ToUpperInvariantExt
IsUpperExt
ToLowerExt
ToLowerInvariantExt
IsLowerExt
IsControlCharacterExt
IsWhiteSpaceExt
IsDigitExt
IsLetterExt
IsLetterOrDigitExt
IsNumberExt
IsPunctuationExt
IsSeparatorExt
IsSymbolExt
IsSurrogateExt
IsHighSurrogateExt
IsLowSurrogateExt
IsMinValueExt
IsMaxValueExt

1.1.0.1

Updated Test project to target .NET 5.

Fixed tests that no longer passed once target framework was upgraded.

Marked CopyExt and all UTF7 extensions as deprecated.

Code maintenance.

Added new versions of 
AddExt, 
SubstractExt, 
MultiplyExt, and 
DivideExt 
for double and decimal types.

New Extensions

Math Extensions:
AreaCircleExt
AreaOfTriangleExt
CircumferenceOfCircle
ArcLengthExt
HypotenuseExt

String Extensions:
FromBase64String2Ext - Converts a base64 string into a standard string using default encoding.

Cryptography Extensions:
GenerateRandomBytesExt
GenerateRandomNonZeroBytesExt

Array Extensions:
RandomExt