@@ -3,6 +3,7 @@
 
 using System;
 using System.Diagnostics;
+using System.Text.Json;
 using System.Threading.Tasks;
 using Xunit;
 
@@ -533,6 +534,69 @@ namespace Extensions.net.core.tests
             string[] arr2 = null;
 
             Assert.Throws<ArgumentNullException>(() => arr2.RandomExt());
+        }
+
+
+        [Fact]
+        public void ToXml()
+        {
+            string[] arr = { "apples", "oranges", "bananas", "peaches", "apples", "pears", "bananas", "kiwis" };
+            string root = "Colors";
+            string elementName = "Color";
+            string expected = "<Colors>\r\n  <Color>apples</Color>\r\n  <Color>oranges</Color>\r\n  <Color>bananas</Color>\r\n  <Color>peaches</Color>\r\n  <Color>apples</Color>\r\n  <Color>pears</Color>\r\n  <Color>bananas</Color>\r\n  <Color>kiwis</Color>\r\n</Colors>";
+            string actual = arr.ToXmlExt(elementName, root);
+            Assert.Equal(expected, actual);
+
+            expected = "<Root>\r\n  <Color>apples</Color>\r\n  <Color>oranges</Color>\r\n  <Color>bananas</Color>\r\n  <Color>peaches</Color>\r\n  <Color>apples</Color>\r\n  <Color>pears</Color>\r\n  <Color>bananas</Color>\r\n  <Color>kiwis</Color>\r\n</Root>";
+            actual = arr.ToXmlExt(elementName);
+            Assert.Equal(expected, actual);
+
+            string nameSpace = "https://www.namespace.com";
+            expected = "<Colors xmlns=\"https://www.namespace.com\">\r\n  <Color>apples</Color>\r\n  <Color>oranges</Color>\r\n  <Color>bananas</Color>\r\n  <Color>peaches</Color>\r\n  <Color>apples</Color>\r\n  <Color>pears</Color>\r\n  <Color>bananas</Color>\r\n  <Color>kiwis</Color>\r\n</Colors>";
+            actual = arr.ToXmlExt(elementName, root, nameSpace);
+            Assert.Equal(expected, actual);
+
+            expected = "<Root xmlns=\"https://www.namespace.com\">\r\n  <Color>apples</Color>\r\n  <Color>oranges</Color>\r\n  <Color>bananas</Color>\r\n  <Color>peaches</Color>\r\n  <Color>apples</Color>\r\n  <Color>pears</Color>\r\n  <Color>bananas</Color>\r\n  <Color>kiwis</Color>\r\n</Root>";
+            actual = arr.ToXmlExt(elementName, ns: nameSpace);
+            Assert.Equal(expected, actual);
+        }
+
+        [Fact]
+        public void ToXDocument()
+        {
+            string[] arr = { "apples", "oranges", "bananas", "peaches", "apples", "pears", "bananas", "kiwis" };
+            string root = "Colors";
+            string elementName = "Color";
+            string expected = "<Colors>\r\n  <Color>apples</Color>\r\n  <Color>oranges</Color>\r\n  <Color>bananas</Color>\r\n  <Color>peaches</Color>\r\n  <Color>apples</Color>\r\n  <Color>pears</Color>\r\n  <Color>bananas</Color>\r\n  <Color>kiwis</Color>\r\n</Colors>";
+            string actual = arr.ToXDocumentExt(elementName, root).ToString();
+            Assert.Equal(expected, actual);
+
+            expected = "<Root>\r\n  <Color>apples</Color>\r\n  <Color>oranges</Color>\r\n  <Color>bananas</Color>\r\n  <Color>peaches</Color>\r\n  <Color>apples</Color>\r\n  <Color>pears</Color>\r\n  <Color>bananas</Color>\r\n  <Color>kiwis</Color>\r\n</Root>";
+            actual = arr.ToXDocumentExt(elementName).ToString();
+            Assert.Equal(expected, actual);
+
+            string nameSpace = "https://www.namespace.com";
+            expected = "<Colors xmlns=\"https://www.namespace.com\">\r\n  <Color>apples</Color>\r\n  <Color>oranges</Color>\r\n  <Color>bananas</Color>\r\n  <Color>peaches</Color>\r\n  <Color>apples</Color>\r\n  <Color>pears</Color>\r\n  <Color>bananas</Color>\r\n  <Color>kiwis</Color>\r\n</Colors>";
+            actual = arr.ToXDocumentExt(elementName, root, nameSpace).ToString();
+            Assert.Equal(expected, actual);
+
+            expected = "<Root xmlns=\"https://www.namespace.com\">\r\n  <Color>apples</Color>\r\n  <Color>oranges</Color>\r\n  <Color>bananas</Color>\r\n  <Color>peaches</Color>\r\n  <Color>apples</Color>\r\n  <Color>pears</Color>\r\n  <Color>bananas</Color>\r\n  <Color>kiwis</Color>\r\n</Root>";
+            actual = arr.ToXDocumentExt(elementName, ns: nameSpace).ToString();
+            Assert.Equal(expected, actual);
+        }
+
+        [Fact]
+        public void ToJson()
+        {
+            string[] arr = { "apples", "oranges", "bananas", "peaches", "apples", "pears", "bananas", "kiwis" };
+            string expected = JsonSerializer.Serialize(arr);
+            string actual = arr.ToJsonExt();
+            Assert.Equal(expected, actual);
+
+            string name = "colors";
+            actual = arr.ToJsonExt(name);
+            expected = @"{""colors"":[""apples"",""oranges"",""bananas"",""peaches"",""apples"",""pears"",""bananas"",""kiwis""]}";
+            Assert.Equal(expected, actual);
         }
 
         #region "Private Methods"
