@@ -9,6 +9,7 @@ using System.Net;
 using System.Text;
 using System.Text.RegularExpressions;
 using System.Threading.Tasks;
+using System.Xml.Linq;
 using Xunit;
 
 namespace Extensions.net.core.tests
@@ -754,6 +755,53 @@ namespace Extensions.net.core.tests
             string message = "info";
             var ex = Record.Exception(() => message.TraceInformationExt());
             Assert.Null(ex);
+        }
+
+        [Fact]
+        public void ToXml()
+        {
+            string text = "Some text to create XML.";
+            string root = "Name";
+            string expected = "<Name>Some text to create XML.</Name>";
+            string actual = text.ToXmlExt(root);
+            Assert.Equal(expected, actual);
+
+            expected = "<Root>Some text to create XML.</Root>";
+            actual = text.ToXmlExt();
+            Assert.Equal(expected, actual);
+
+            string nameSpace = "https://www.namespace.com";
+            expected = "<Name xmlns=\"https://www.namespace.com\">Some text to create XML.</Name>";
+            actual = text.ToXmlExt(root, nameSpace);
+            Assert.Equal(expected, actual);
+
+            expected = "<Root xmlns=\"https://www.namespace.com\">Some text to create XML.</Root>";
+            actual = text.ToXmlExt(ns: nameSpace);
+            Assert.Equal(expected, actual);
+        }
+
+        [Fact]
+        public void ToXDocument()
+        {
+            string text = "Some text to create XML.";
+            string root = "Name";
+            XDocument expected = new (new XElement(root, text));
+            XDocument actual = text.ToXDoumentExt(root);
+            Assert.Equal(expected.ToString(), actual.ToString());
+
+            expected = new (new XElement("Root", text));
+            actual = text.ToXDoumentExt();
+            Assert.Equal(expected.ToString(), actual.ToString());
+
+            string nameSpace = "https://www.namespace.com";
+            XNamespace ns = nameSpace; 
+            expected = new XDocument(new XElement(ns + root, text));
+            actual = text.ToXDoumentExt(root, nameSpace);
+            Assert.Equal(expected.ToString(), actual.ToString());
+
+            expected = new XDocument(new XElement(ns + "Root", text));
+            actual = text.ToXDoumentExt(ns: nameSpace);
+            Assert.Equal(expected.ToString(), actual.ToString());
         }
 
         #region "Private Methods"
