@@ -12,7 +12,7 @@
     <PackageIcon>icon.png</PackageIcon>
     <PackageIconUrl />
     <PackageLicenseFile>license.txt</PackageLicenseFile>
-    <Description>The missing extensions library. Lets you work more productively in dotnet. Type a dot after your object instance for a list of helper functions that allow you to perform common and complex tasks. Features over 200 extension methods.
+    <Description>The missing extensions library. Type a dot after your object instance for a list of helper functions that allow you to perform common and complex tasks. Features over 200 extension methods.
 
 Visit our wiki at https://github.com/adyle5/ExtensionsDotNet/wiki for a list of available methods and samples.
 
@@ -45,10 +45,18 @@ HypotenuseExt
 
 String Extensions:
 FromBase64String2Ext - Converts a base64 string into a standard string using default encoding.
+ToXmExt
+ToXDoumentExt
 
 Cryptography Extensions:
 GenerateRandomBytesExt
-GenerateRandomNonZeroBytesExt</PackageReleaseNotes>
+GenerateRandomNonZeroBytesExt
+
+Array Extensions:
+RandomExt
+ToXmlExt
+ToXDocumentExt
+ToJsonExt</PackageReleaseNotes>
     <RepositoryUrl>https://github.com/adyle5/ExtensionsDotNet</RepositoryUrl>
     <PackageProjectUrl>https://github.com/adyle5/ExtensionsDotNet/wiki</PackageProjectUrl>
     <AssemblyVersion>1.1.0.1</AssemblyVersion>
